--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
@@ -24,9 +24,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.WebApiCompatShim" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0.1" />
+    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0-beta.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
-    <ProjectReference Include="..\..\..\Common\Sample.Common\Sample.Common.csproj" />
+    <ProjectReference Include="..\..\..\Common\Sample.Common.Beta\Sample.Common.Beta.csproj" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
