--- a/Samples/PublicSamples/EchoBot/src/EchoBot.WindowsService/EchoBot.WindowsService.csproj
+++ b/Samples/PublicSamples/EchoBot/src/EchoBot.WindowsService/EchoBot.WindowsService.csproj
@@ -49,6 +49,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotNetEnv, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\DotNetEnv.2.3.0\lib\netstandard1.3\DotNetEnv.dll</HintPath>
