--- a/.github/workflows/echobot-infra-WBCE2E.yml
+++ b/.github/workflows/echobot-infra-WBCE2E.yml
@@ -1,4 +1,4 @@
-name: .NET BOT D1 INFRA WBC11
+name: .NET BOT D1 INFRA WBCE2E
 
 # Controls when the action will run.
 on:
@@ -8,18 +8,18 @@ on:
     branches: [ bcage29/TeamsVoiceEchoBot ]
     paths:
       - ./Samples/PublicSamples/EchoBot/ADF/**
-      - .github/workflows/echobot-infra-WBC11.yml
+      - .github/workflows/echobot-infra-WBCE2E.yml
   pull_request:
     branches: [ bcage29/TeamsVoiceEchoBot ]
     paths:
       - ./Samples/PublicSamples/EchoBot/ADF/**
-      - .github/workflows/echobot-infra-WBC11.yml
+      - .github/workflows/echobot-infra-WBCE2E.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
-  OrgName: WBC11
+  OrgName: WBCE2E
   Location: eastus2
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -40,7 +40,7 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_CREDENTIALS_WBC11_BOT}}
+          creds: ${{secrets.AZURE_CREDENTIALS_WBCE2E_BOT}}
           enable-AzPSSession: true
 
       - name: Deploy_All_Subscription
@@ -56,7 +56,7 @@ jobs:
             ./Samples/PublicSamples/EchoBot/ADF/main.ps1 @Params
             if ($e){throw $e}
         env:
-          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_WBC11_BOT }}
+          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_WBCE2E_BOT }}
 
 
 
